--- a/index.html
+++ b/index.html
@@ -65,32 +65,52 @@
 		<form>
 			Decimal Week to Convert: <input type="number" id="convertWeek">
 		</form>
-		<button onclick="convertWeek()">Convert Decimal Week</button>
+		<button onclick="convertWeek()">
+			<div>
+				<p>Convert Decimal to Week</p>
+			</div>
+		</button>
 		<div id="convertedWeek"></div> <br>
 
 		<!-- Outputs time until future date -->
 		<div align="center">
 			<textarea rows="6" placeholder="Type the date like this: November 22, 2017 19:23:45" id="timeUntilDate"></textarea>
 		</div>
-		<button onclick="timeUntil()">Time Until Date</button>
+		<button onclick="timeUntil()">
+			<div>
+				<p>Time Until Date</p>
+			</div>
+		</button>
 		<div id="timeUntilOutput"></div> <br>
 
 		<!-- Converts deary to binary -->
 		<form>
 			Denary Value: <input type="number" id="toBinaryValue" min="1">
 		</form>
-		<button onclick="toBinary()">Denary to Binary</button>
+		<button onclick="toBinary()">
+			<div>
+				<p>Denary to Binary</p>
+			</div>
+		</button>
 		<div id="toBinaryOutput"></div> <br>
 
 		<!-- Calculate the approximate number of partitions an integer has -->
 		<form>
 			Value: <input type="number" id="partitionsValue" min="1">
 		</form>
-		<button onclick="partitions()">Number of Partitions</button>
+		<button onclick="partitions()">
+			<div>
+				<p>Number of Partitions</p>
+			</div>
+		</button>
 		<div id="partitionsOutput"></div> <br>
 
 		<!-- Generates a random factorable, quadratic formula -->
-		<button onclick="factorableQuadratic()">Factorable Quadratic</button>
+		<button onclick="factorableQuadratic()">
+			<div>
+				<p>Factorable Quadratic</p>
+			</div>
+		</button>
 		<div id="factorableOutput"></div> <br>
 
 		<!-- Calculates the median, the other quartiles and the interquartile range -->
@@ -98,14 +118,22 @@
 			Length: <input type="number" id="IQRLength" min="1"> <br>
 			Max: <input type="number" id="IQRMax">
 		</form>
-		<button onclick="medianIQR()">Quartiles and IQR</button>
+		<button onclick="medianIQR()">
+			<div>
+				<p>Quartiles and IQR</p>
+			</div>
+		</button>
 		<div id="IQROutput"></div> <br>
 
 		<!-- A written method of finding the approximate square root -->
 		<form>
 			Value: <input type="number" id="sqrtOf">
 		</form>
-		<button onclick="approximateSqrt()">Approximate Square Root</button>
+		<button onclick="approximateSqrt()">
+			<div>
+				<p>Approximate Square Root</p>
+			</div>
+		</button>
 		<div id="approxSqrtOutput"></div> <br>
 
 		<!-- Normal Distribution Calculator -->
@@ -114,7 +142,11 @@
 			Mean: <input type="number" id="ndfMean"> <br>
 			Standard Deviation: <input type="number" id="ndfSD">
 		</form>
-		<button onclick="normalDistribution()">Normal Distribution Function</button>
+		<button onclick="normalDistribution()">
+			<div>
+				<p>Normal Distribution Function</p>
+			</div>
+		</button>
 		<div id="ndfOutput"></div> <br>
 
 		<!-- Mode, Median and Mean calculator -->
@@ -123,14 +155,22 @@
 			Min: <input type="number" id="avgMin"> <br>
 			Array Length: <input type="number" id="avgLength" min="1">
 		</form>
-		<button onclick="averages()">Mode, Median and Mean</button>
+		<button onclick="averages()">
+			<div>
+				<p>Mode, Median and Mean</p>
+			</div>
+		</button>
 		<div id="avgOutput"></div> <br>
 
 		<!-- Morse Code Converter -->
 		<div align="center">
 			<textarea rows="6" placeholder="Type your message here, either normal letters, numbers, and punctuation or Morse code using '.' for a dot, '-' for a dash, separating letters by spaces and words by '/'. Also, separate Morse code letters with space" id="morseInput"></textarea>
 		</div>
-		<button onclick="morseConvert()">Convert Sentence or Morse Code</button>
+		<button onclick="morseConvert()">
+			<div>
+				<p>Convert Sentence or Morse Code</p>
+			</div>
+		</button>
 		<div id="morseOutput"></div> <br>
 
 		<!-- Numerical Methods: Iterations -->
@@ -142,7 +182,11 @@
 			b: <input type="number" id="iterationB"> <br>
 			c: <input type="number" id="iterationC">
 		</form>
-		<button onclick="iteration()">Iterations</button>
+		<button onclick="iteration()">
+			<div>
+				<p>Iterations</p>
+			</div>
+		</button>
 		<div id="iterationOutput"></div> <br>	
 
 		<!-- Estimating PI using the Monte Carlo Method -->
@@ -150,32 +194,56 @@
 			Max: <input type="number" id="monteCarloMax" min="1"> <br>
 			Number of Repetitions: <input type="number" id="monteCarloRep" min="1">
 		</form>
-		<button onclick="monteCarlo()">Monte Carlo Method</button>
+		<button onclick="monteCarlo()">
+			<div>
+				<p>Monte Carlo Method</p>
+			</div>
+		</button>
 		<div id="monteCarloOutput"></div> <br>
 
 		<!-- Number to Base 64 -->
 		<form>
 			Number to Base-64: <input type="number" id="base64ConvertNum" min="1">
 		</form>
-		<button onclick="base64Convert()">Convert to Base-64</button>
+		<button onclick="base64Convert()">
+			<div>
+				<p>Convert to Base-64</p>
+			</div>
+		</button>
 		<div id="base64ConvertOutput"></div> <br>
 
 		<!-- Finds out if the number inputted is a Happy Number -->
 		<form>
 			Number: <input type="number" id="happyNumbersInput" min="1">
 		</form>
-		<button onclick="happyNumbers()">Is it a Happy Number?</button>
+		<button onclick="happyNumbers()">
+			<div>
+				<p>Is it a Happy Number?</p>
+			</div>
+		</button>
 		<div id="happyNumbersOutput"></div> <br>
 
 		<!-- Other -->
-		<button onclick="reload()">Reload Page</button>
+		<button onclick="reload()">
+			<div>
+				<p>Reload Page</p>
+			</div>
+		</button>
 
 		<!-- Other -->
 		<a href="https://twitter.com/the_banana_guy_" target="_blank">
-			<button>By kakol20</button>
+			<button>
+				<div>
+					<p>By kakol20</p>
+				</div>
+			</button>
 		</a>
 		<a href="https://github.com/kakol20/Experimental-V3" target="_blank">
-			<button>Github Page</button>
+			<button>
+				<div>
+					<p>Github Page</p>
+				</div>
+			</button>
 		</a>
 	</div>
 </body>
